2009-06-21  Thomas Sefzick <thse@users.sourceforge.net>

	* term/gd.trm: The background color requested in "set term png..."
	was not being used in truecolor png output.
	Bugfix

2009-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (test_term): Initialize bounding box.  Exercise a few
	more terminal properties if available:  transparency, enhanced text. 

	* configure.in: Remove the EXPERIMENTAL warning from the configuration
	options for command line macros and for the tikz/lua terminal.

2009-06-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_term.h term/wxt.trm:
	set term wxt {dashed} {dashlength <dl>}

2009-06-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxt_set_color):  plot .. lc N should take
	only the color from linetype N, not any of the other properties.
	Bugfix  (e.g.  plot sin(x) with lines lt 0 lc 3)

2009-06-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c src/save.c src/graphics.c src/term_api.h docs/gnuplot.doc
	docs/plotstyles.gnu:  Add new linestyle property 'pointinterval'.

	This is a modified version of patchset #2653943 contributed by
	Hans (oe6jwf@users.sourceforge.net).

	* src/term_api.h term/post.trm term/cairo.trm term/pdf.trm term/cgm.trm
	term/pbm.trm term/emf.trm term/win.trm:  Add a flag TERM_MONOCHROME
	that indicates a terminal wants black lines only, even if it is capable
	of RGB or palette color.

2009-06-05  Ethan A Merritt  <merritt@u.washington.edu>

	* time.c (ggmtime): Counting back from 1.e38 by one year at a time takes
	forever. Limit the range of acceptable time values to +/- 10^12 seconds,
	which gives a range of 33688 years forward or back.
	* axis.c (gen_tics): Skip calculation of 0-length minor ticks

2008-06-04  Peter Hedwig  <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua term/lua/gnuplot-tikz.help
	share/LaTeX/gnuplot-lua-tikz.sty: Update the lua terminal scripts to